# auspol-donations-twitter-bot

./: .gitignore  README.md  app.py  requirements.txt
data/: build_db.py  build_tables.py  utils.py
data/src/2022/: Associated Entity Returns.csv  Capital Contributions.csv  Detailed Debts.csv  Detailed Discretionary Benefits.csv  Donor Returns.csv  Party Returns.csv  Political Campaigner Returns.csv  Third Party Returns.csv
data/tables/: parties.md  twitter_donors.md  twitter_donors_page_1.md  twitter_donors_page_2.md
donationsbot/: deployment_stack.py  deployment_stage.py  donationsbot_stack.py
donationsbot/functions/bot/: index.py  pyproject.toml  requirements.txt
donationsbot/functions/bot/bot/: twitter.py
donationsbot/functions/bot/bot/data/: donors.json  twitter.json
donationsbot/functions/watcher/: index.py  pyproject.toml  requirements.txt
