[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Dave Pretty <david@launchlab.com.au>"]

[tool.poetry.dependencies]
python = "^3.9"
aws-lambda-powertools = "^1.24.2"
tweepy = "^4.5.0"
Jinja2 = "^3.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
